Fix firefox location bar border color in Minwaita-Vanilla-Puavo gtk theme.

--- a/rules/themes/files/Minwaita-Vanilla-Puavo/gtk-3.0/gtk.css
+++ b/rules/themes/files/Minwaita-Vanilla-Puavo/gtk-3.0/gtk.css
@@ -5361,8 +5361,8 @@ printdialog .dialog-action-box {
 /**********
  * Frames *
  **********/
-frame,
-.frame {
+.frame,
+frame > border {
   box-shadow: none;
   margin: 0;
   padding: 0;
