Fix theme and add missing icons to close #241.

--- a/rules/themes/files/Geos-puavo-dark-panel/gnome-shell/gnome-shell.css
+++ b/rules/themes/files/Geos-puavo-dark-panel/gnome-shell/gnome-shell.css
@@ -1085,7 +1085,7 @@ color: #fff;
   icon-size: 1.09em; }
 
 .window-close {
-  background-image: url("close.png");
+  background-image: url("close.svg");
   background-size: 32px;
   height: 32px;
   width: 32px; }
