Drop the vendor logo from the release logos so we can generate release logos at buildtime and yet have the vendor logo configurable with puavo-conf.  Webmenu release logo is now split into two images. Also generate release logos for every profile, some of those are hosttypes and some are not but it really should not matter, we do not need to hardcode possible hosttype values to the release logo generating script.

--- a/parts/webmenu/styles/sidebar.styl
+++ b/parts/webmenu/styles/sidebar.styl
@@ -3,10 +3,12 @@
 
 .bb-sidebar
 
-  .logo
+  .logos-container
     position absolute
     bottom 5px
     right 5px
+    display flex
+    flex-direction column
 
   .settings-wrapper
     disable-select()
