Fix background colors in the calendar

--- a/rules/themes/files/Geos-puavo-dark-panel/gnome-shell/gnome-shell.css
+++ b/rules/themes/files/Geos-puavo-dark-panel/gnome-shell/gnome-shell.css
@@ -896,7 +896,7 @@ color: #fff;
   border-color: transparent;
  }
   .calendar-day-base:hover, .calendar-day-base:focus {
-    background-color: transparent; }
+    background-color: rgb(68, 171, 236); }
   .calendar-day-base:active {
     color: white;
     background-color: rgb(68,171,236);
