--- a/cloud/puavo-ds/master/lib/puavo-ds/templates/init_ldap.ldif.erb
+++ b/cloud/puavo-ds/master/lib/puavo-ds/templates/init_ldap.ldif.erb
@@ -20,7 +20,7 @@ objectClass: olcDatabaseConfig
 objectClass: olcFrontendConfig
 olcDatabase: {-1}frontend
 # The maximum number of entries that is returned for a search operation
-olcSizeLimit: 500
+olcSizeLimit: unlimited
 # Allow unlimited access to local connection from the local root user
 olcAccess: {0}to * by dn.exact=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth manage by * break
 olcAccess: {1}to dn.base="" by * read
