Add "deref" slapd-module to hopefully suppress   "slap_global_control: unrecognized control: 1.3.6.1.4.1.4203.666.5.16" messages in syslog.  Seen on both ldap master and slave.
I have not actually tested that this works, I suspect the change
should be made to master as well before it can be effective on
the slave (due to required schema-update on slave).

--- a/cloud/puavo-ds/ext/templates/modules.ldif.erb
+++ b/cloud/puavo-ds/ext/templates/modules.ldif.erb
@@ -14,3 +14,4 @@ olcModuleLoad: {8}auditlog
 olcModuleLoad: {9}refint
 olcModuleLoad: {10}constraint
 olcModuleLoad: {11}accesslog
+olcModuleLoad: {12}deref
