--- a/cloud/puavo-ds/master/lib/puavo-ds/templates/init_ldap.ldif.erb
+++ b/cloud/puavo-ds/master/lib/puavo-ds/templates/init_ldap.ldif.erb
@@ -73,7 +73,8 @@ olcModuleLoad: {7}auditlog
 olcModuleLoad: {8}refint
 olcModuleLoad: {9}constraint
 olcModuleLoad: {10}accesslog
-olcModuleLoad: {11}smbkrb5pwd_srv
+olcModuleLoad: {11}deref
+olcModuleLoad: {12}smbkrb5pwd_srv
 
 dn: olcOverlay={0}syncprov,olcDatabase={0}config,cn=config
 objectClass: olcSyncProvConfig
