--- a/cloud/puavo-ds/slave/init_ldap_slave.ldif.erb
+++ b/cloud/puavo-ds/slave/init_ldap_slave.ldif.erb
@@ -60,6 +60,7 @@ olcModuleLoad: {7}auditlog
 olcModuleLoad: {8}refint
 olcModuleLoad: {9}constraint
 olcModuleLoad: {10}accesslog
+olcModuleLoad: {11}deref
 
 dn: olcDatabase={1}hdb,cn=config
 objectClass: olcDatabaseConfig
