Do a javascript trick so we can link to cups administration pages from bootserver "main webpage".

--- a/rules/bootserver_nginx/templates/index.html
+++ b/rules/bootserver_nginx/templates/index.html
@@ -6,6 +6,7 @@
   <body bgcolor="white" text="black">
     <h1>Puavo Bootserver</h1>
     <ul>
+      <li><a href="#" onclick="javascript:window.location.port=631">CUPS - Common UNIX Printing System</a></li>
       <li><a href="/munin/localdomain/localhost.localdomain/index.html">Munin The Resource Monitor</a></li>
       <li><a href="/puavo-wlancontroller/">Puavo WLAN Controller</a></li>
     </ul>
