--- a/rules/gnome_shell_extensions/files/LogOutButton@kyle.aims.ac.za/stylesheet.css
+++ b/rules/gnome_shell_extensions/files/LogOutButton@kyle.aims.ac.za/stylesheet.css
@@ -1,1 +1,7 @@
-/* none used*/
+/* zero-sized menuitem to stop GNOME from screwing with us */
+.foof {
+    height: 0;
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
