--- a/parts/user-registration/puavo-user-registration.glade
+++ b/parts/user-registration/puavo-user-registration.glade
@@ -379,10 +379,6 @@
     <property name="window_position">center-always</property>
     <property name="default_width">480</property>
     <property name="default_height">420</property>
-    <property name="skip_taskbar_hint">True</property>
-    <property name="skip_pager_hint">True</property>
-    <property name="decorated">False</property>
-    <property name="deletable">False</property>
     <property name="gravity">static</property>
     <property name="has_resize_grip">True</property>
     <property name="show_menubar">False</property>
@@ -410,9 +406,9 @@
         <child>
           <object class="GtkButton" id="go_to_desktop">
             <property name="label" translatable="yes">go to desktop</property>
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
+            <property name="no_show_all">True</property>
             <property name="halign">start</property>
           </object>
           <packing>
