--- a/parts/laptop-setup/puavo-laptop-setup.glade
+++ b/parts/laptop-setup/puavo-laptop-setup.glade
@@ -133,6 +133,22 @@
               </packing>
             </child>
             <child>
+              <object class="GtkRadioButton" id="boot_abitti">
+                <property name="label" translatable="yes">Abitti</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="active">True</property>
+                <property name="draw_indicator">True</property>
+                <property name="group">boot_puavo_os</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkRadioButton" id="boot_windows">
                 <property name="label" translatable="yes">Windows</property>
                 <property name="visible">True</property>
@@ -147,7 +163,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
